# neurosearch

./: CITATION.cff  LICENSE  PORTFOLIO_ANALYSIS.md  README.md  pyproject.toml
deployment/: setup_gcp_vm.sh
notebooks/: 01_esci_eda.ipynb  02_build_semantic_ids.ipynb  03_train_dense_retriever.ipynb  04_train_t5_gr.ipynb  05_hybrid_rag_eval.ipynb  Neurosearch_Portfolio_Analysis.ipynb  Neurosearch_Training_Colab_no_error.ipynb
output/analysis/portfolio/: README.md  summary.json
src/neurosearch/: __init__.py  schemas.py
src/neurosearch/data/: __init__.py  esci_loader.py  indexing_pipeline.py  semantic_id_builder.py
src/neurosearch/eval/: experiments.py  metrics.py
src/neurosearch/rag/: __init__.py  context_builder.py  query_expander.py  rag_ranker.py
src/neurosearch/retrieval/: __init__.py  dense_retriever.py  generative_retriever.py  hybrid_fusion.py  sparse_retriever.py
tests/: test_sanity.py
